tests/invalid/syntax_err_missing_brace.c
int main() {
    if(0){
        return 1;
    return 2;
}
// ERROR: Line 6, Error 2004